# PPpackage

./: .clang-format  .dockerignore  .gitignore  Dockerfile  PPpackage.py  PPpackage_PPpackage.py  PPpackage_arch.py  PPpackage_conan.py  PPpackage_conan_deployer.py  PPpackage_manager.py  PPpackage_runc.py  PPpackage_sub.py  PPpackage_utils.py  README.md  build_fakealpm.sh  combine-lockfile-generators.py  combine-lockfile-product-ids.py  compose-docker.yaml  compose-podman.yaml  compose.yaml  conanfile-fetch.py.jinja  conanfile-leaf.py.jinja  conanfile-root.py.jinja  create_user.py  docker-build.sh  generators.json  graph.json  image-build.sh  images-build.sh  init_database.py  manager.sh  profile.jinja  requirements-dev.txt  requirements-editable.txt  requirements-project.txt  requirements-run.txt  requirements.json  requirements.txt  run-docker-PPpackage.sh  run-docker-init.sh  (+17 more)
.github/: compose.yaml  config.json
PPpackage/: setup.py
PPpackage-AUR/: setup.py
PPpackage-PP/: setup.py
PPpackage-arch/: setup.py
PPpackage-arch/fakealpm/: CMakeLists.txt  build.sh  fakealpm.cpp
PPpackage-aur/: setup.py
PPpackage-conan/: setup.py
PPpackage-pacman/: setup.py
PPpackage-pacman-utils/: setup.py
PPpackage-repository-driver/: setup.py
PPpackage-repository-driver-server/: setup.py
PPpackage-run/: setup.py
PPpackage-runc/: setup.py
PPpackage-runner/: setup.py
PPpackage-submanager/: setup.py
PPpackage-utils/: setup.py
compose/: docker.yaml  podman.yaml
container-utils/: setup.py
devel/: combine.py
src/installer/pacman/fakealpm/: CMakeLists.txt
(+528 files in other folders)
